# FPG

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: cmake.yml
DataAcquisition/: configfile.yaml  create_fpg_input.py  environment.yml  generate_concatenated_data.py  occurrences_estimation.py  preprocess_data.sh  rgutils.py
Evaluation/cfgs/: movement_PGHF.json  test_450n.json  test_short.json
Evaluation/datasets/: movement_PGHF.txt
PythonModule/: CMakeLists.txt  Makefile  main.cpp  runTest.py  test.py
PythonModule/cfgs/: test_300n.json  test_long.json
PythonModule/datasets/: test_short.txt
PythonModule/include/: ClosedDetect.h  ClosedTree.h  Defines.h  FPGrowth.h  FPNode.h  FPTree.h  FrequencyRef.h  HeapAlloc.h  Logger.h  Memory.h  Pattern.h  SigTerm.h  Timer.h  Types.h  Utils.h
PythonModule/src/: FIMModule.cpp
